# argus

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: audit.toml
.claude/: SECURITY-BOT-ONBOARDING.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/argus-auth-core/: Cargo.toml
crates/argus-auth-core/benches/: bench_session.rs  bench_token.rs
crates/argus-auth-core/src/: config.rs  crypto.rs  entitlement.rs  error.rs  lib.rs  service.rs  session.rs  token.rs
crates/argus-auth-core/tests/: integration_jwks.rs  proptest_session.rs  proptest_tier.proptest-regressions  proptest_tier.rs
crates/argus-auth-core/tests/common/: jwks_mock.rs  mock_repos.rs  mod.rs
crates/argus-axum/: Cargo.toml
crates/argus-axum/src/: context.rs  error.rs  extractors.rs  layer.rs  lib.rs  rate_limit.rs  usage.rs
crates/argus-billing-core/: Cargo.toml
crates/argus-billing-core/src/: config.rs  error.rs  lib.rs  provider.rs  service.rs  stripe.rs  webhook.rs
crates/argus-client/: Cargo.toml
crates/argus-client/src/: auth.rs  billing.rs  cache.rs  channel.rs  config.rs  error.rs  identity.rs  interceptor.rs  lib.rs  metrics.rs  retry.rs
crates/argus-client/tests/: integration_tests.rs
crates/argus-db/: Cargo.toml
crates/argus-db/migrations/: 001_initial_schema.sql
crates/argus-db/src/: error.rs  lib.rs  models.rs  pool.rs  repo.rs
crates/argus-db/src/pg/: api_key.rs  invoice.rs  mod.rs  session.rs  subscription.rs  usage.rs  user.rs
crates/argus-mcp/: Cargo.toml
crates/argus-mcp/src/: auth.rs  error.rs  lib.rs  prompts.rs  resources.rs  server.rs  tools.rs
crates/argus-proto/: Cargo.toml  build.rs
crates/argus-proto/proto/argus/v1/: auth.proto  billing.proto  common.proto  identity.proto
crates/argus-proto/src/: lib.rs
crates/argus-types/: Cargo.toml
crates/argus-types/src/: api.rs  api_key.rs  auth.rs  billing.rs  entitlement.rs  error.rs  lib.rs  session.rs  subscription.rs  tier.rs  user.rs
crates/argus-utils/: Cargo.toml
crates/argus-utils/src/: config.rs  lib.rs
plans/: argus-appendices.md  argus-executive-brief.md  argus-integration-sibyl-prism-jane.md  argus-operating-playbook.md  argus-technical-reference.md
services/auth-api/: Cargo.toml
services/auth-api/src/: config.rs  error.rs  extractors.rs  grpc.rs  main.rs  state.rs
services/auth-api/src/handlers/: auth.rs  health.rs  mod.rs  tier.rs
services/billing-api/: Cargo.toml
services/billing-api/src/: config.rs  error.rs  grpc.rs  main.rs  state.rs
services/billing-api/src/handlers/: health.rs  invoices.rs  mod.rs  shared.rs  subscription.rs  usage.rs  webhook.rs
services/billing-api/tests/: input_validation.rs  webhook_security.rs
services/mcp-server/: Cargo.toml
services/mcp-server/src/: main.rs
