[workspace]
resolver = "2"
members = [
    "crates/argus-types",
    "crates/argus-utils",
    "crates/argus-db",
    "crates/argus-auth-core",
    "crates/argus-billing-core",
    "crates/argus-proto",
    "crates/argus-mcp",
    "crates/argus-client",
    "services/auth-api",
    "services/billing-api",
    "services/mcp-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/home-claude-bot/argus"
authors = ["Bot Army <bots@andrz.io>"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# Allow casts in specific contexts (pagination math)
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
# SQL strings and docs
needless_raw_string_hashes = "allow"
doc_markdown = "allow"
# Wildcard imports in internal modules
wildcard_imports = "allow"
# Stub async fns that will be implemented later
unused_async = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "propagate-header", "timeout"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# MCP (Model Context Protocol)
rmcp = { version = "0.8", features = ["server", "macros", "transport-io", "transport-sse-server"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Auth
jsonwebtoken = "9"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
reqwest = { version = "0.12", features = ["json"] }
moka = { version = "0.12", features = ["future"] }
dashmap = "5"
hex = "0.4"

# Testing
tokio-test = "0.4"
wiremock = "0.6"

[profile.dev]
debug = 0
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = false

