[package]
name = "argus-billing-core"
description = "Billing business logic for Argus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
argus-types = { path = "../argus-types" }
argus-db = { path = "../argus-db" }
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

# Crypto for webhook signature verification
sha2.workspace = true
hmac.workspace = true
hex = "0.4"

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true

[features]
default = []
