[package]
name = "argus-client"
description = "Client SDK for Argus auth and billing services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable Prometheus metrics exporter for /metrics endpoint support
prometheus = ["dep:metrics-exporter-prometheus"]

[dependencies]
argus-types = { path = "../argus-types" }
argus-proto = { path = "../argus-proto" }
tonic = { workspace = true, features = ["tls"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
metrics = "0.24"
moka = { version = "0.12", features = ["future"] }
metrics-exporter-prometheus = { version = "0.16", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tonic = { workspace = true, features = ["tls"] }
async-trait = { workspace = true }
tempfile = "3.19"
metrics-exporter-prometheus = "0.16"
