[package]
name = "auth-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Argus Auth API microservice"

[lints]
workspace = true

[[bin]]
name = "auth-api"
path = "src/main.rs"

[dependencies]
argus-types = { path = "../../crates/argus-types" }
argus-db = { path = "../../crates/argus-db" }
argus-auth-core = { path = "../../crates/argus-auth-core" }
argus-proto = { path = "../../crates/argus-proto" }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-reflection = "0.11"
prost = { workspace = true }
prost-types = "0.12"

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

# Config
dotenvy = "0.15"

[dev-dependencies]
tokio-test = { workspace = true }
