[package]
name = "billing-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Argus Billing API microservice"

[lints]
workspace = true

[[bin]]
name = "billing-api"
path = "src/main.rs"

[dependencies]
argus-types = { path = "../../crates/argus-types" }
argus-db = { path = "../../crates/argus-db" }
argus-billing-core = { path = "../../crates/argus-billing-core" }
argus-utils = { path = "../../crates/argus-utils" }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Config
dotenvy = "0.15"

[dev-dependencies]
tokio-test = { workspace = true }
