[package]
name = "argus-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Argus MCP Server binary"

[lints]
workspace = true

[[bin]]
name = "argus-mcp-server"
path = "src/main.rs"

[dependencies]
argus-mcp = { path = "../../crates/argus-mcp" }
argus-types = { path = "../../crates/argus-types" }

# Async
tokio = { workspace = true }

# Config
dotenvy = "0.15"

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
